# phronesis-index-nmi

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  REPRODUCIBILITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
NMI_SUBMISSION_PACKAGE/: SUBMISSION_QA_CHECKLIST.md  acknowledgements_funding.txt  author_contributions_CRediT.txt  code_availability.txt  competing_interests.txt  cover_letter_nmi.txt  data_availability.txt  ethics_statement.txt
NMI_SUBMISSION_PACKAGE/manuscript_source/: enhanced_parameter_selection.tex  enhanced_results_interpretation.tex  references.bib  (+7 more)
code/: phronesis_core.py
env/: environment.yml  requirements.txt
paper/: Makefile  enhanced_discussion.tex  enhanced_parameter_selection.tex  enhanced_practical_guidance.tex  expanded_experimental_details.tex  improved_abstract.tex  logic_maze_baselines.tex  main.tex  main_manuscript.tex  new_introduction.tex  robustness_analysis.tex  sec5_2_safety_gym_expanded.tex  sheaf_construction_guide.tex  theorems_revised.tex
phronesis/: __init__.py  core.py  epsilon.py  laplacian.py
scripts/: build_submission.sh  docker_run_all.sh  generate_data.sh  reproduce_all.sh  reproduce_logic_maze.sh  reproduce_multi_robot.sh  reproduce_safety_gym.sh  reproduce_scalability.sh  run_all_experiments.sh
supplementary/: deployment_guide.tex  enhanced_parameter_selection.tex  references.bib  robustness_analysis.tex  sec2_4_practitioner_checklist.tex  sheaf_construction_guide.tex  supplementary_information.tex  theorems_revised.tex
tests/: test_phronesis.py
(+21 files in other folders)
